[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "threadpoolctl"
author = "Thomas Moreau"
author-email = "thomas.moreau.2010@gmail.com"
home-page = "https://github.com/joblib/threadpoolctl"
description-file = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
