[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "threadpoolctl"
author = "Thomas Moreau"
author-email = "thomas.moreau.2010@gmail.com"
home-page = "https://github.com/joblib/threadpoolctl"
description-file = "README.md"
requires-python = ">=3.6"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38', 'py39']
experimental_string_processing = true