[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

# TODO: replace the following section by the standard [project] section to be able
# to use flit v4.
[tool.flit.metadata]
module = "threadpoolctl"
author = "Thomas Moreau"
author-email = "thomas.moreau.2010@gmail.com"
home-page = "https://github.com/joblib/threadpoolctl"
description-file = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.black]
line-length = 88
target_version = ['py39', 'py310', 'py311', 'py312', 'py313']
preview = true
